--- a/project.html
+++ b/project.html
@@ -222,7 +222,7 @@
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 4</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
+                  <a href="project4.html" class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
                       <path d="M5 12h14"></path>
@@ -272,7 +272,7 @@
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 5</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
+                  <a href="project5.html" class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
                       <path d="M5 12h14"></path>
@@ -322,7 +322,7 @@
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 6</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
+                  <a href="project6.html" class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
                       <path d="M5 12h14"></path>
